# wg-peer-resolv-update

./: .gitignore  CMakeLists.txt  README  core.cpp  core.h  main.cpp  wireguard.h  wireguard.hpp
.github/workflows/: build.yml
cmake/: git_watcher.cmake
version/: git.c.in
